# postgres-agent

./: .env.example  CLAUDE.md  Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  commands.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: app_config.rs  database.rs  error.rs  lib.rs  llm.rs  loader.rs  safety.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  context.rs  decision.rs  error.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  error.rs  executor.rs  lib.rs  schema.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  conversion.rs  error.rs  lib.rs  openai.rs  prompt.rs  provider.rs
crates/llm/src/prompts/: base.txt  format.txt  safety.txt  tools.txt
crates/safety/: Cargo.toml
crates/safety/src/: audit.rs  blacklist.rs  confirmation.rs  lib.rs  pii.rs  validator.rs
crates/tools/: Cargo.toml
crates/tools/src/: error.rs  executor.rs  lib.rs  registry.rs  trait_def.rs
crates/tools/src/built_in/: mod.rs  query_tool.rs  schema_tool.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs
crates/tui/src/components/: command_palette.rs  input.rs  mod.rs  status_bar.rs
crates/tui/src/views/: chat.rs  mod.rs
crates/util/: Cargo.toml
crates/util/src/: crypto.rs  lib.rs  logger.rs  result.rs  time.rs
implementation/: week1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md  week_7.md  week_8.md
specs/: 0001_agent_research.md  0002_agent_research1.md  0003_build_agent.md  0004_prd_requirement.md  0006_pg_agent_impl_plan.md  TECHNICAL_SPECIFICATION.md  instructions.md
src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs
