[workspace]
members = [
    "crates/core",
    "crates/llm",
    "crates/db",
    "crates/tools",
    "crates/tui",
    "crates/config",
    "crates/safety",
    "crates/cli",
    "crates/util",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["Postgres Agent Contributors"]

[workspace.dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "tracing"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "json"] }
async-openai = "0.32.4"
ratatui = { version = "0.30.0", features = ["crossterm", "serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
tokio-stream = "0.1"
secrecy = "0.8"
async-trait = "0.1.89"
derive_more = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
dyn-clone = "1"
rand = "0.8"
