[package]
name = "postgres-agent-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "CLI interface for PostgreSQL Agent"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
derive_more.workspace = true

# Internal dependencies
postgres-agent-core = { path = "../core" }
postgres-agent-config = { path = "../config" }
postgres-agent-util = { path = "../util" }

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
