[package]
name = "postgres-agent-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Configuration management for PostgreSQL Agent"

[dependencies]
tokio.workspace = true
serde.workspace = true
toml = "0.8"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
derive_more.workspace = true
secrecy.workspace = true
url.workspace = true
dirs = "5"
notify = "6"

# Internal dependencies
postgres-agent-util = { path = "../util" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
