[package]
name = "postgres-agent-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Database layer for PostgreSQL Agent"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
secrecy.workspace = true

# Internal dependencies
postgres-agent-util = { path = "../util" }
postgres-agent-config = { path = "../config" }

[dev-dependencies]
tokio-test = "0.4"
