[package]
name = "postgres-agent-safety"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Safety and audit layer for PostgreSQL Agent"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
derive_more.workspace = true
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
uuid = { version = "1", features = ["v4"] }

# Internal dependencies
postgres-agent-util = { path = "../util" }

[dev-dependencies]
tokio-test = "0.4"
