[package]
name = "postgres-agent-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Tool system for PostgreSQL Agent"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
derive_more.workspace = true
dyn-clone.workspace = true
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

# Internal dependencies
postgres-agent-db = { path = "../db" }
postgres-agent-safety = { path = "../safety" }
postgres-agent-util = { path = "../util" }

[dev-dependencies]
tokio-test = "0.4"
