[package]
name = "postgres-agent-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Terminal UI for PostgreSQL Agent"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
derive_more.workspace = true

# Internal dependencies
postgres-agent-core = { path = "../core" }
postgres-agent-util = { path = "../util" }

[dev-dependencies]
tokio-test = "0.4"
