[package]
name = "postgres-agent-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Utility functions for PostgreSQL Agent"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
secrecy.workspace = true
derive_more.workspace = true
url.workspace = true
rand.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
